LU-8044 mgs: Only add OSP for registered MDT

Only add OSP for those really registered MDT,
by checking if its llog is empty, otherwise
it will incorrectly add "setup OSP" record in
the begining of config log, which will cause
setup failure.

Signed-off-by: Di Wang <di.wang@intel.com>
Change-Id: I9df26a5e6653b4ac0413dad01ea2abfda6f1c1fb
Reviewed-on: http://review.whamcloud.com/19658
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>